[build-system]
requires = [
    "scikit_build_core>=0.9.0",
    "pybind11>=2.12.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "pypatchworkpp"
version = "0.0.1"
requires-python = ">=3.8"
description = "A Python binding for advanced ground segmentation algorithms using pybind11 and C++ backend."
dependencies = [
    "numpy>=1.23"
]

[tool.scikit-build]
cmake.args = [
    "-DINCLUDE_PYTHON_WRAPPER=true",
    "-DCMAKE_BUILD_TYPE=Release",
    "-DCMAKE_CXX_FLAGS=-Wall -Ofast"
]
